syntax = "proto3";

package com.diploma.panchev.grpc;

option java_package = "com.diploma.panchev.account.grpc";
option java_outer_classname = "AccountGrpc";

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
}

message CreateAccountRequest {
  string name = 1;
  string user_id = 2;
}

message CreateAccountResponse {
  Account account = 1;
}

message Account {
  string id = 1;
  string name = 2;
}